--- a/post.html
+++ b/post.html
@@ -35,7 +35,7 @@
             </div>
         </nav>
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('assets/img/post-bg.jpg')">
+        <header class="masthead" style="background-image: url('assets/img/pas.jpeg')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
@@ -63,18 +63,19 @@
                         <h2 class="section-heading"></h2>
                         <p>Kada završim školu htjela bi se baviti kozmetikom. To mi je životni san i uživam u tem jer se ućim na sebi. Teško je ostvariti svoje ciljeve, ali nikad ne treba odustajati.
                         </p>
+                        <p> Jako volim svog psića Max-a, a ovo je on.</p>
                         <blockquote class="blockquote"></blockquote>
                         <p></p>
                         <h2 class="section-heading"></h2>
                         <p></p>
-                        <a href="#!"><img class="img-fluid" src="assets/img/post-sample-image.jpg" alt="..." /></a>
+                        <a href="#!"><img class="img-fluid" src="assets/img/max.jpeg" alt="..." /></a>
                         <span class="caption text-muted"></p>
                         <p></p>
                         <p>
-                            Placeholder text by
-                            <a href="http://spaceipsum.com/">Space Ipsum</a>
-                            &middot; Images by
-                            <a href="https://www.flickr.com/photos/nasacommons/">NASA on The Commons</a>
+                            
+                            <a href="http://spaceipsum.com/"></a>
+                            &middot; 
+                            <a href="https://www.flickr.com/photos/nasacommons/"></a>
                         </p>
                     </div>
                 </div>
@@ -87,31 +88,23 @@
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <ul class="list-inline text-center">
                             <li class="list-inline-item">
-                                <a href="#!">
+                                <a href="https://www.instagram.com/bahnikela?igsh=M3oyNm0wMDA5c2F0">
                                     <span class="fa-stack fa-lg">
                                         <i class="fas fa-circle fa-stack-2x"></i>
-                                        <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                                        <i class="fab fa-instagram fa-stack-1x fa-inverse"></i>
                                     </span>
                                 </a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="#!">
+                                <a href="https://www.tiktok.com/@elabahnik?_t=8nA8MW7HLI8&_r=1">
                                     <span class="fa-stack fa-lg">
                                         <i class="fas fa-circle fa-stack-2x"></i>
-                                        <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
-                                    </span>
-                                </a>
-                            </li>
-                            <li class="list-inline-item">
-                                <a href="#!">
-                                    <span class="fa-stack fa-lg">
-                                        <i class="fas fa-circle fa-stack-2x"></i>
-                                        <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+                                        <i class="fab fa-tiktok fa-stack-1x fa-inverse"></i>
                                     </span>
                                 </a>
                             </li>
                         </ul>
-                        <div class="small text-center text-muted fst-italic">Copyright &copy; Your Website 2023</div>
+                        <div class="small text-center text-muted fst-italic">Ne pitaj ništa&copy; Moja stranica 2024.</div>
                     </div>
                 </div>
             </div>
